--- a/frontend/my-app/.gitignore
+++ b/frontend/my-app/.gitignore
@@ -1,24 +1,17 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# Node modules
+node_modules/
+*/node_modules/
 
-node_modules
-dist
-dist-ssr
-*.local
+# Environment files
+.env
+.env.*
+!.env.example
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Frontend specific
+frontend/my-app/.env
+frontend/my-app/.env.*
+frontend/my-app/dist/
+
+# Backend specific
+backend/.env
+backend/.env.*
