--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://bssmoothtech:bilal24434@cluster0.zpjz0kt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=your-mongo-db-link
 PORT=5000
